<resources>
    <string name="app_name">Tip Calculator</string>
    <string name="bill">Bill</string>
    <string name="percent">Percent</string>
    <string name="tip_percent">Tip Percent</string>
    <string name="total">Total</string>
    <string name="_00">00%</string>
    <string name="_0_00">$0.00</string>
    <string name="totalTV">$0.00</string>
    <string name="reset">reset</string>
    <string name="percentUpButton">+</string>
    <string name="percentDownButton">-</string>
</resources>
