<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="dougherty.tipcalculator.MainActivity"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <TextView
        android:id="@+id/billLabel"
        android:layout_width="38dp"
        android:layout_height="24dp"
        android:layout_marginStart="32dp"
        android:text="@string/bill"
        android:textColor="@android:color/holo_red_dark"
        android:textColorHint="@android:color/holo_red_dark"
        android:textColorLink="@android:color/holo_red_dark"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/percentLabel"
        android:layout_marginTop="69dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="67dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="32dp"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/percentLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/percent"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginStart="32dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/percentTV"
        tools:layout_constraintBaseline_creator="1"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="32dp" />

    <TextView
        android:id="@+id/tipPercent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tip_percent"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginStart="32dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/tipPercentTV"
        tools:layout_constraintBaseline_creator="1"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="32dp" />

    <TextView
        android:id="@+id/totalLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/total"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="@+id/totalTV"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/totalTV"
        android:layout_marginLeft="32dp" />

    <EditText
        android:id="@+id/billET"
        android:layout_width="227dp"
        android:layout_height="35dp"
        android:background="@android:color/holo_orange_light"
        android:ems="10"
        android:inputType="numberDecimal"
        android:textColorLink="@android:color/holo_red_dark"
        android:layout_marginEnd="51dp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="69dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginRight="54dp" />

    <TextView
        android:id="@+id/percentTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_00"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="@+id/totalTV"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="160dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="159dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tipPercentTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0_00"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginStart="36dp"
        tools:layout_constraintTop_creator="1"
        android:layout_marginTop="36dp"
        app:layout_constraintTop_toBottomOf="@+id/percentUpButton"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toRightOf="@+id/tipPercent"
        android:layout_marginLeft="36dp" />

    <Button
        android:id="@+id/percentUpButton"
        android:layout_width="53dp"
        android:layout_height="41dp"
        android:layout_marginEnd="62dp"
        android:background="@android:color/holo_blue_bright"
        android:text="@string/percentUpButton"
        android:textStyle="bold"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="@+id/percentTV"
        app:layout_constraintRight_toRightOf="@+id/percentDownButton"
        app:layout_constraintTop_toBottomOf="@+id/percentTV"
        android:layout_marginRight="62dp"
        tools:layout_editor_absoluteX="247dp" />

    <Button
        android:id="@+id/percentDownButton"
        android:layout_width="53dp"
        android:layout_height="41dp"
        android:layout_marginStart="87dp"
        android:background="@android:color/holo_blue_bright"
        android:text="@string/percentDownButton"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintTop_toTopOf="@+id/percentUpButton"
        app:layout_constraintLeft_toRightOf="@+id/tipPercentTV"
        android:layout_marginLeft="86dp"
        android:layout_marginTop="0dp"
        tools:layout_editor_absoluteX="309dp" />

    <Button
        android:id="@+id/resetButton"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:text="@string/reset"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="68dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="69dp"
        app:layout_constraintTop_toTopOf="@+id/totalLabel"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp" />

    <TextView
        android:id="@+id/totalTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="$0.00"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="168dp"
        app:layout_constraintLeft_toLeftOf="@+id/tipPercentTV" />

</android.support.constraint.ConstraintLayout>
